<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSkyBlue"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/Temperature"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:onClick="Temperature_button"
        android:text="@string/temperature_and_humidity"
        android:background="@color/LightPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/Switch_button" />

    <Button
        android:id="@+id/HumanActivity"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@color/IndianRed"
        android:onClick="HA_Click"
        android:text="@string/human_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/Temperature" />

    <Button
        android:id="@+id/Switch_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@color/LimeGreen"
        android:onClick="SWITCH_onClick"
        android:text="@string/sw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"

        android:onClick="SWITCH_onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_zk_64_cz" />

    <Button
        android:id="@+id/Student_DB"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:onClick="more"
        android:text="@string/network_information"
        android:background="@color/LightSlateGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/HumanActivity"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:onClick="Temperature_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/icon_zk_64_wsd" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:text="@string/human_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/icon_zk_64_hw" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:onClick="more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/net_wifi" />


</android.support.constraint.ConstraintLayout>